samples/_failures_safe/1761713127_30071f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76dbd7ca.c: In function ‘handle_processing’:
./samples/SAFE/__tmp_76dbd7ca.c:166:20: error: missing terminating " character
  166 |             printf("Invalid event
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_76dbd7ca.c:166:13: error: expected expression at end of input
  166 |             printf("Invalid event
      |             ^~~~~~
./samples/SAFE/__tmp_76dbd7ca.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76dbd7ca.c:166:13: error: expected declaration or statement at end of input
